# app

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.local.yaml  compose.prod.yaml  compose.yaml
.github/workflows/: cd.yml  docker-healthcheck.yml
ai/: .isort.cfg  Dockerfile  README.md  pyproject.toml
ai/app/: backend_api.py  cli.py  database.py  llm.py  main.py  schemas.py  tasks.py  worker.py
ai/app/commands/: llm.py  routes.py
ai/app/indexer/: __init__.py  llm.py  llm_variants.py  openai_llm.py  worker.py
ai/app/llm_providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  openrouter_provider.py
ai/app/tests/: benchmark.py  cli.py  comparison.py
ai/rabbitmq/: rabbitmq.conf
ai/tests/suites/gpw/: stocks.json  test-cases.json
ai/tests/suites/simple/: stocks.json  test-cases.json
backend/: .http  Dockerfile  build.gradle
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  worker.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: usePushNotifications.tsx
frontend/src/storage/: settings.default.ts  settings.storage.ts  storage.types.ts
frontend/src/store/: data.ts  useDataStore.ts  useSettingsStore.ts  useStore.ts  useUserStockStore.ts  useUserStore.ts
frontend/src/types/: appSettings.ts  news.ts  next-auth.d.ts  routes.ts  stocks.ts  users.ts
nginx/: README.md  nginx.conf
scripts/: .env.example  README.md  preprocess_csv.py
(+146 files in other folders)
