[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Kaszkowiak",email = "maciej.kaszkowiak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.10,<0.116.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
